--- a/index.html
+++ b/index.html
@@ -1,1 +1,143 @@
-hhhhaaaa
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CV - Sergio Esteban Adán</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f9;
+        }
+        .container {
+            width: 80%;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: white;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+        }
+        h1, h2, h3 {
+            color: #333;
+        }
+        .contact-info {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            border-bottom: 2px solid #007BFF;
+            padding-bottom: 10px;
+        }
+        .contact-info div {
+            margin: 10px 0;
+        }
+        .section {
+            margin: 20px 0;
+        }
+        .skills-list, .experience-list, .education-list {
+            list-style-type: none;
+            padding: 0;
+        }
+        .skills-list li, .experience-list li, .education-list li {
+            margin-bottom: 10px;
+        }
+        .section-title {
+            background-color: #007BFF;
+            color: white;
+            padding: 5px;
+        }
+        .stack {
+            color: #007BFF;
+        }
+    </style>
+</head>
+<body>
+
+<div class="container">
+    <h1>Sergio Esteban Adán</h1>
+    <div class="contact-info">
+        <div>
+            <p><strong>Phone:</strong> +34 692696806</p>
+            <p><strong>Email:</strong> <a href="mailto:sergio.estebanadan@gmail.com">sergio.estebanadan@gmail.com</a></p>
+        </div>
+        <div>
+            <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/sergioestebanadan">linkedin.com/in/sergioestebanadan</a></p>
+        </div>
+    </div>
+
+    <div class="section">
+        <h2 class="section-title">Summary</h2>
+        <p>I am a person who loves automations. After working on many technologies, cloud is my passion.</p>
+    </div>
+
+    <div class="section">
+        <h2 class="section-title">Experience</h2>
+        <ul class="experience-list">
+            <li>
+                <h3>Cloud Architect (AI Team) - Sngular</h3>
+                <p><strong>December 2019 - Present | Madrid, Spain</strong></p>
+                <p>Working on the AI team, supporting the infrastructure section. Responsible for Cloud architecture, managing AWS, GCP, and Azure. Developed services in Python and managed international projects using Serverless Framework, Sceptre, and Cloudformation.</p>
+                <p class="stack">Stack: AWS, Serverless Framework, Sceptre, Cloudformation, Terraform, GCP, Azure, Python, Angular, Docker, Kubernetes, Gitlab CI, Jira, Gitlab</p>
+            </li>
+            <li>
+                <h3>Full-Stack Developer (24x7 Support) - BABEL (ING)</h3>
+                <p><strong>February 2018 - December 2019 | Madrid, Spain</strong></p>
+                <p>Supported the ING platform launch in the Czech Republic. Provided 24x7 support for application stack, including frontend, backend, and infrastructure.</p>
+                <p class="stack">Stack: Spring, Javascript, Oracle, Jenkins, Ansible, Linux (Red Hat), Bash, RabbitMQ, Git, Jira, Scrum</p>
+            </li>
+            <li>
+                <h3>Full Stack Developer - MOBALOO</h3>
+                <p><strong>October 2016 - February 2018 | Alcalá de Henares, Spain</strong></p>
+                <p>Developed the main marketing application for comparing CPI offers. Worked on the complete stack and managed AWS infrastructure.</p>
+                <p class="stack">Stack: PHP, Yii2, MySQL, AWS, Go, Python</p>
+            </li>
+            <li>
+                <h3>Systems Technician - Indra</h3>
+                <p><strong>March 2013 - June 2013 | Torrejón de Ardoz</strong></p>
+                <p>Worked in the deployment department for the Spanish air traffic controller application. Managed Red Hat servers and configured network environments.</p>
+                <p class="stack">Stack: Red Hat, Cisco, Bash</p>
+            </li>
+        </ul>
+    </div>
+
+    <div class="section">
+        <h2 class="section-title">Education</h2>
+        <ul class="education-list">
+            <li>
+                <h3>Degree in Information Systems - Universidad de Alcalá</h3>
+                <p><strong>2013 - 2016</strong></p>
+            </li>
+            <li>
+                <h3>Higher Technician in Administration of Computer Network Systems - IES Valle Inclán</h3>
+                <p><strong>2011 - 2013</strong></p>
+            </li>
+        </ul>
+    </div>
+
+    <div class="section">
+        <h2 class="section-title">Skills</h2>
+        <ul class="skills-list">
+            <li>Amazon Web Services</li>
+            <li>Docker</li>
+            <li>Kubernetes</li>
+        </ul>
+    </div>
+
+    <div class="section">
+        <h2 class="section-title">Languages</h2>
+        <ul class="skills-list">
+            <li>Spanish (Native or Bilingual)</li>
+            <li>English (Full Professional)</li>
+        </ul>
+    </div>
+
+    <div class="section">
+        <h2 class="section-title">Certifications</h2>
+        <ul class="skills-list">
+            <li>Vault Fundamentals</li>
+        </ul>
+    </div>
+</div>
+
+</body>
+</html>
